# FastAPIDemoSqlClient

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  descri.md  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  pytest.ini​  requirements.txt  requirements.txt​  requirements.txt​​  ​​Dockerfile  ​​Dockerfile​
.github/workflows/: ci.yml  deploy.yml  test.yml
app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
migrations/: 20230828154731_user_table.js
scripts/: entrypoint.sh  init.sql  wait-for-db.sh
seeds/: user_data.js
sql_scripts/: 01_schema.sql  02_test_data.sql
tests/: conftest.py  test_api.py  test_api_with_utils.py  test_crud.py  test_main.py  test_utils.py  utils.py
tests/unit/: test_main.py
